--- a/app/views/users/_home_guest.html.erb
+++ b/app/views/users/_home_guest.html.erb
@@ -1,10 +1,10 @@
 
     <script type="text/javascript">
-      function loadMarkers(){
-        <% @forShow.each do | measurement | %>
-          <% unless measurement.lat.nil? || measurement.lon.nil? %>
-            var contentString = create_content(<%= measurement.msph %>, '<%= measurement.user.fullname %>', '<%= time_ago_in_words(measurement.created_at) %>', '<%= link_to "see details", measurement %>');
-            placeMarker(contentString, <%= measurement.lat %>, <%= measurement.lon %>);
+        function loadAkws(){
+        <% @akws.each do | akw | %>
+          <% unless akw.lat.nil? || akw.lng.nil? || akw.lat == "" || akw.lng == "" %>
+            var contentString = create_akw_content('<%= akw.name %>', '<%= akw.status %>', '<%= akw.full_link %>');
+            placeMarker(contentString, <%= akw.lat %>, <%= akw.lng %>);
           <% end %>
         <% end %>
         clusterMarker();
